--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>com.ai.st.microservice.sinic</groupId>
     <artifactId>st-microservice-sinic</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0</version>
     <name>st-microservice-sinic</name>
     <description>SINIC</description>
 
@@ -87,7 +87,7 @@
         <dependency>
             <groupId>com.ai.st.microservice.common</groupId>
             <artifactId>st-common</artifactId>
-            <version>1.1.2</version>
+            <version>1.1.3</version>
         </dependency>
 
         <dependency>
@@ -106,6 +106,12 @@
             <groupId>com.google.auto.value</groupId>
             <artifactId>auto-value-annotations</artifactId>
             <version>1.6.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <version>2.5.9</version>
         </dependency>
 
 
@@ -129,18 +135,6 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-            <!--            <plugin>-->
-            <!--                <artifactId>maven-compiler-plugin</artifactId>-->
-            <!--                <configuration>-->
-            <!--                    <annotationProcessorPaths>-->
-            <!--                        <path>-->
-            <!--                            <groupId>com.google.auto.value</groupId>-->
-            <!--                            <artifactId>auto-value</artifactId>-->
-            <!--                            <version>1.2</version>-->
-            <!--                        </path>-->
-            <!--                    </annotationProcessorPaths>-->
-            <!--                </configuration>-->
-            <!--            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -148,18 +142,7 @@
                 <configuration>
                     <release>${java.version}</release>
                     <showWarnings>true</showWarnings>
-<!--                    <compilerArgs>-->
-<!--                        <arg>-XDcompilePolicy=simple</arg>-->
-<!--                        <arg>-Xplugin:ErrorProne -XepDisableWarningsInGeneratedCode-->
-<!--                            -XepExcludedPaths:.*/target/generated-sources/.*-->
-<!--                        </arg>-->
-<!--                    </compilerArgs>-->
                     <annotationProcessorPaths>
-<!--                        <path>-->
-<!--                            <groupId>com.google.errorprone</groupId>-->
-<!--                            <artifactId>error_prone_core</artifactId>-->
-<!--                            <version>2.4.0</version>-->
-<!--                        </path>-->
                         <path>
                             <groupId>com.google.auto.value</groupId>
                             <artifactId>auto-value</artifactId>
