--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
         <dependency>
             <groupId>com.ai.st.microservice.common</groupId>
             <artifactId>st-common</artifactId>
-            <version>1.1.4</version>
+            <version>1.1.6</version>
         </dependency>
 
         <dependency>
@@ -117,6 +117,18 @@
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.newrelic.logging</groupId>
+            <artifactId>logback</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.newrelic.agent.java</groupId>
+            <artifactId>newrelic-api</artifactId>
+            <version>7.5.0</version>
         </dependency>
 
     </dependencies>
@@ -158,6 +170,35 @@
                             <version>1.3.2</version>
                         </path>
                     </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>net.revelc.code.formatter</groupId>
+                <artifactId>formatter-maven-plugin</artifactId>
+                <version>2.18.0</version>
+                <configuration>
+                    <lineEnding>LF</lineEnding>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>format</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>8.5.4</version>
+                <configuration>
+                    <user>postgres</user>
+                    <password>123456</password>
+                    <url>jdbc:postgresql://localhost:54321/sistema-transicion</url>
+                    <schemas>
+                        <schema>sinic</schema>
+                    </schemas>
                 </configuration>
             </plugin>
         </plugins>
