--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
     <groupId>com.ai.st.microservice.sinic</groupId>
     <artifactId>st-microservice-sinic</artifactId>
-    <version>1.3.3</version>
+    <version>1.5.0-beta.1</version>
     <name>st-microservice-sinic</name>
     <description>SINIC</description>
 
